# ig_finder

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  cli.py  data_loader.py  main.py  models.py  recommender.py  scraper.py
data/: pages.json
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_data_loader.py  test_models.py  test_recommender.py
