[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ig-finder"
version = "0.1.0"
description = "A hybrid content-based recommender that suggests Instagram pages from a user's interests and the accounts they already follow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mariana Lourenco" }]
keywords = ["instagram", "recommender", "tf-idf", "fastapi", "content-based-filtering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.3",
]
scraping = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/marrlourenco/ig_finder"
Repository = "https://github.com/marrlourenco/ig_finder"
Issues = "https://github.com/marrlourenco/ig_finder/issues"

[project.scripts]
ig-finder = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
